--- a/app/globals.css
+++ b/app/globals.css
@@ -61,9 +61,16 @@
   * {
     border-color: hsl(var(--border));
   }
+  html {
+    overflow-x: hidden;
+    width: 100%;
+  }
   body {
     background-color: hsl(var(--background));
     color: hsl(var(--foreground));
     font-weight: 300;
+    overflow-x: hidden;
+    width: 100%;
+    position: relative;
   }
 }
